fixed header spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,7 @@ input::-webkit-inner-spin-button {
 }
 
 #app {
-  padding-top: 60px;
+  padding-top: 90px;
 }
 
 @media print {
